adding a toggle between styles

--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@ title: Progress bars on TLEO
 {% include slices/grid.html id="page3" data="luther-series-3" %}
 {% include slices/grid.html id="page4" data="luther-series-4" %}
 {% include slices/grid.html id="page5" data="luther-series-5" %}
+{% include slices/toggle.html %}
